[package]
name = "percolator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "percolator"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1.23", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = "1.4"

[features]
default = []
test = ["runtime-vec-api"]  # Enable test-only harness configuration
stress = []  # Reserved for stress/audit harnesses
fuzz = ["test"]  # Enable fuzzing tests (includes test feature for test_visible helpers)
audit-scan = []  # Enable full account-table invariant scans on public exits
runtime-vec-api = []  # Legacy runtime Vec adapters for tests/proofs only; production uses zero-copy views.

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = true

[profile.sbf]
inherits = "release"
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(kani)',
    'cfg(target_os, values("solana"))',
] }

[workspace.metadata.kani]
flags = { tests = true }
unstable = { stubbing = true }

[[workspace.metadata.kani.proof]]
harness = ".*"
unwind = 70

[[test]]
name = "v16_spec_tests"
path = "tests/v16_spec_tests.rs"
required-features = ["test"]

[[test]]
name = "v16_fuzzing"
path = "tests/v16_fuzzing.rs"
required-features = ["fuzz"]

[[test]]
name = "resolved_insolvent_fuzz"
path = "tests/resolved_insolvent_fuzz.rs"
required-features = ["test"]
